--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -4,7 +4,7 @@ author: "Matthias Greni\u00e9"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Benchmark Of Distinctiveness}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
