--- a/vignettes/rarity_indices.Rmd
+++ b/vignettes/rarity_indices.Rmd
@@ -149,8 +149,7 @@ with $U_i$ the uniqueness of species $i$, $d_{ij}$ the functional distance betwe
 
 ui = pres_uniqueness(mat, dist_mat)
 
-ui[1:5, 1:5]
-
+head(ui)
 ```
 ## Restrictedness computation
 
@@ -167,7 +166,6 @@ with $R_i$ the restrictedness of species $i$, $N_i$ the number of sites where sp
 ri = pres_restrictedness(mat)
 
 head(ri)
-
 ```
 
 # Functional rarity indices from a tidy data.frame
